--- a/starter/02-backgrounds/background-repeat.html
+++ b/starter/02-backgrounds/background-repeat.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>backgrounds</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/background-repeat.css">
   </head>
   <body>
     <header><h1>My Blog</h1></header>
